web.config 新增配置

--- a/WebSocket/Web/Web.config
+++ b/WebSocket/Web/Web.config
@@ -11,4 +11,9 @@
       <httpRuntime targetFramework="4.5" />
     </system.web>
 
+  <appSettings>
+    <add key="SocketPort" value="8080"/>
+    <add key="SocketIP" value="192.168.10.3"/>
+    
+  </appSettings>
 </configuration>
